--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,11 @@ a {
   }
   body {
     color: white;
-    background: black;
+    background: rgb(22, 22, 22);
+    background: linear-gradient(
+      151deg,
+      rgba(22, 22, 22, 1) 34%,
+      rgba(34, 34, 34, 1) 85%
+    );
   }
 }
